objects/Group_Services__c.object
<CustomObject>
    <fields>
        <fullName>Date_Term_Sec_Sent_To_Repository_Mailbox__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Term Sec Sent To Repository Mailbox</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Cards_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test Cards Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_HPCC_Loaded_To_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test HPCC Loaded To Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_HPCC_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test HPCC Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Matrix_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test Matrix Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Testing_Was_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Testing Was Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Vendor_Hold_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Date Vendor Hold Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Vision_SI_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Vision SI Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Vision_Vendor_Screen_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Vision Vendor Screen Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Web_Tool_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Web Tool Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Past_Production__c</fullName>
        <formula>Today() -  Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Vendor_Screen_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Vendor Screen Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dt_Compare_Report_Sent_To_Client_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dt Compare Report Sent To Client/Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dt_Test_NTS_EDPDD409_ACCOUNT_LIST_Comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dt Test.NTS.EDPDD409.ACCOUNT.LIST Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everything</fullName>
                </value>
                <value>
                    <fullName>Actives</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Retirees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_ID_Card_Count__c</fullName>
        <label>Estimated ID Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Local_ID_Card_Count__c</fullName>
        <label>Estimated Local ID Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Mail_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Order_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSNameDesc__c</fullName>
        <formula>Name&amp;&quot; - &quot;&amp;Account_Legal_Name__c&amp;&quot; - &quot;&amp;Text(Group_Services_Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSNameDesc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Overall_Status_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GS Overall Status Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Group_Number__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Service_Change_Type__c</fullName>
        <label>Group Service Change Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Break / Fix</fullName>
                </value>
                <value>
                    <fullName>Contract Code Change</fullName>
                </value>
                <value>
                    <fullName>Department Add / Cancel</fullName>
                </value>
                <value>
                    <fullName>Description Change</fullName>
                </value>
                <value>
                    <fullName>Eligibility Code Fix</fullName>
                </value>
                <value>
                    <fullName>Eligibility File Layout Change</fullName>
                </value>
                <value>
                    <fullName>Eligibility File Transmission Change</fullName>
                </value>
                <value>
                    <fullName>Eligibility Vendor Change</fullName>
                </value>
                <value>
                    <fullName>Full Account Termination</fullName>
                </value>
                <value>
                    <fullName>General Mapping Change</fullName>
                </value>
                <value>
                    <fullName>HPCC Add or Change</fullName>
                </value>
                <value>
                    <fullName>Manual to Electronic</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Multiple Changes</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>OE File Tracking Only</fullName>
                </value>
                <value>
                    <fullName>Package Additions</fullName>
                </value>
                <value>
                    <fullName>Package Cancellation</fullName>
                </value>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
                <value>
                    <fullName>Section Additions</fullName>
                </value>
                <value>
                    <fullName>Section Cancellation</fullName>
                </value>
                <value>
                    <fullName>Strings/Tables Changes</fullName>
                </value>
                <value>
                    <fullName>Subgroup Additions</fullName>
                </value>
                <value>
                    <fullName>Subgroup Cancellation</fullName>
                </value>
                <value>
                    <fullName>Suffix Additions</fullName>
                </value>
                <value>
                    <fullName>Suffix Cancellations</fullName>
                </value>
                <value>
                    <fullName>Vendor Screen Add/Change-WGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Service Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Services_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <label>Group Services Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Overall_Status__c</fullName>
        <label>Group Services Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Structure_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Posted_To_NIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Posted To NIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Sent_To_IC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Sent To IC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HCR_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HCR Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HDRT424K_CSR_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HDRT424K CSR Num</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HDTT260K_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HDTT260K CSR Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HDTT265K_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HDTT265K CSR Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HDTT500K_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HDTT500K CSR Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HDZTSVGK_CSR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HDZTSVGK CSR Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICTIDGS__c</fullName>
        <formula>Implementation_Tracking_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICTIDGS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Change_Type__c</fullName>
        <label>ID Card Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adding Products</fullName>
                </value>
                <value>
                    <fullName>Adding Sub-Groups</fullName>
                </value>
                <value>
                    <fullName>Copay Change(s)</fullName>
                </value>
                <value>
                    <fullName>Eligibility Vendor Change</fullName>
                </value>
                <value>
                    <fullName>Group Termination</fullName>
                </value>
                <value>
                    <fullName>ID Card Carrier Change (re: Engage)</fullName>
                </value>
                <value>
                    <fullName>Logo Change</fullName>
                </value>
                <value>
                    <fullName>Misc. Changes</fullName>
                </value>
                <value>
                    <fullName>Multiple Changes</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Phone Number Changes</fullName>
                </value>
                <value>
                    <fullName>Plan Name Changes</fullName>
                </value>
                <value>
                    <fullName>Sub-Group Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Generation_Type_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Generation Type Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Generation_Type__c</fullName>
        <label>ID Card Generation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Level</fullName>
                </value>
                <value>
                    <fullName>Subscriber Level</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Group_Level_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Group Level Suffixes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Card_Issue_Level__c</fullName>
        <label>ID Card Issue Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Maintenance</fullName>
                </value>
                <value>
                    <fullName>Full Client Issuance</fullName>
                </value>
                <value>
                    <fullName>Partial Re-Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Overall_Status_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ID Card Overall Status</label>
        <referenceTo>Group_Services__c</referenceTo>
        <relationshipName>Group_Services_and_ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Card_Overall_Status__c</fullName>
        <label>ID Card Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Request_Type__c</fullName>
        <label>ID Card Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case Level</fullName>
                </value>
                <value>
                    <fullName>Group Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Suppression_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Suppression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Work_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Work Request Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id, Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Name__c))</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID_Display_Text__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber</formula>
        <label>Implementation Record ID Display Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK(    Implementation_Tracking_ID__r.Implementation_Record_ID__c  , Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipName>Group_Services_and_ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Benefit_Updates_Applicable__c</fullName>
        <label>Is Benefit Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_CDHP_Applicable__c</fullName>
        <label>Is CDHP Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Eligibility_Applicable__c</fullName>
        <label>Is Eligibility Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Eligibility_COBRA_Applicable__c</fullName>
        <label>Is Eligibility COBRA Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_GS_General_Information_Applicable__c</fullName>
        <label>Is GS General Information Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Services_ID_Cards_Applicable__c</fullName>
        <label>Is Group Services ID Cards Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Services_Migration_Applicable__c</fullName>
        <label>Is Group Services Migration Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Structure_Applicable__c</fullName>
        <label>Is Group Structure Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Updates_Applicable__c</fullName>
        <label>Is Group Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_HPCC_Updates_Applicable__c</fullName>
        <label>Is HPCC Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ID_Card_Req_Gathering_Applicable__c</fullName>
        <label>Is ID Card Req Gathering Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF( Owner:User.Id  == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Production_ID_Cards_Applicable__c</fullName>
        <label>Is Production ID Cards Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Rate_and_Billing_Applicable__c</fullName>
        <label>Is Rate and Billing Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Tables_Data_Sets_Misc_Applicable__c</fullName>
        <label>Is Tables, Data Sets, Misc Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_This_A_COBRA_Only_File__c</fullName>
        <label>Is This A COBRA Only File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_COBRA_Population_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual COBRA Population Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Population_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Population Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Population__c</fullName>
        <label>Manual Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Med_Mgmt_Vendor_Screen_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Med Mgmt Vendor Screen Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migration Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Legacy_Platform__c</fullName>
        <label>Migration Legacy Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mockup_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mockup Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Services_and_ID_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mockups_Revision_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mockups Revision Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mockups_Sent_For_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required When Custom ID Cards Are Selected - WGS Only</inlineHelpText>
        <label>Mockups Sent For Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orthonet_Vendor_Screen_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Orthonet Vendor Screen Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Overall Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Fullname__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName +  Owner:Queue.QueueName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Code(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_String_Post_Production_Date__c</fullName>
        <label>Pending String Post Production Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Contract Code(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Enrollment_File_Status__c</fullName>
        <label>Production Enrollment File Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on File Delivery</fullName>
                    <label>Waiting On File Delivery</label>
                </value>
                <value>
                    <fullName>File Received and Being Reviewed/Loaded</fullName>
                    <label>File Received And Being Reviewed/Loaded</label>
                </value>
                <value>
                    <fullName>File Loading Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_HPCC_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production HPCC Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Package Code(s)</label>
        <type>TextArea</type>
    </fields>
</CustomObject>